# SpaceShell

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.sh  doxide.yaml  mkdocs.yaml
.github/workflows/: deploy-docs
include/: builtins.hpp  parser.hpp  prompt.hpp  shell.hpp  signals.hpp
src/: builtins.cpp  main.cpp  parser.cpp  prompt.cpp  shell.cpp  signals.cpp
